edit fiels and fix issues

--- a/src/assest/style/main.css
+++ b/src/assest/style/main.css
@@ -1,3 +1,7 @@
+.site-hero-right h1 {
+    background-image: var(--gradient-primary);
+    color: white;
+}
 .intro-title span {
     background-image: var(--gradient-primary);
     -webkit-background-clip: text;
