--- a/src/assest/style/navbar.css
+++ b/src/assest/style/navbar.css
@@ -10,8 +10,16 @@
     top: 0;
     left: 0;
     backdrop-filter: blur(20px);
-    background-color: rgba(255, 255, 255, 0.6);
+    /* background-color: rgba(255, 255, 255, 0.6); */
+    background-color: var(--navbar-scrolled-bg, rgba(255, 255, 255, 0.6));
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+}
+:root {
+    --navbar-scrolled-bg: rgba(255, 255, 255, 0.6);
+}
+
+.dark {
+    --navbar-scrolled-bg: rgba(26, 31, 36, 0.6);
 }
 .navbar.scrolled.show {
     transform: translateY(0);
